2007-2-1	fabian

	* Added a default keyboard profile: xterm(OS X).
	* Fixed a Panther compatibility bug.
	* 0.9.5 release
	
2007-1-30	fabian

	* Fixed loss of settings bug due to full screen mode switchings.
	* Fixed a bug that causes the text under cursor rendered in wrong font.
	* Fixed window level for the preference panel under full screen mode transitions.
	
2007-1-29	fabian

	* Now full screen mode uses the current window settings instead of the settings in address book.
	* Full screen mode will adjust font size if "Font Size Follows Resize" is set.
	* Fixed the scrolling bug when there's no scroller bar.
	
2007-1-26	fabian

	* Windows will have unified look when tabs are set to unified style.
	* Fixed underline color bug (#1640553).
	* Slow down update rate when the terminal window is not the key window.
	
2007-1-25	fabian

	* Added option to send text in custom key-mapping.
	* Added option to disable session-initiated window resize.
	
2007-1-24	fabian

	* Added option to turn off vertical scrollbar.
	* Fixed broken Find.
	* Fixed tab updating glitch.
	* Fixed several full screen related bug/crashes.
	
2007-1-23	fabian

	* Fixed the "report a bug" link in the about panel.
	* Finished full screen support.
	
2007-1-22	fabian
	
	* Fixed a timer function bug that fails to turn of timer after a session is over.
	* Fixed a emulation bug related to an unsupported escape sequences.
	* Changed the "Use Transparency" behavior. Now it's a per window setting. When it's disabled, any updates of
	  display behind the terminal window will not cause a refresh.
	* Unfinished support for full screen mode (still crashes).
	
2007-1-16	fabian

	* Moved updateTimer back to PTYSession and fixed a type of related crash.
	* Improved the handling of title changing. 
	* Changed the timer code in hope of reducing the CPU usage.
	
2007-1-12	fabian

	* Fixed a memory leak in PseudoTerminal.
	* Fixed opening file behavior (#1629686).